# ros2_kortex

kortex_api/: CMakeLists.txt
kortex_bringup/: package.xml
kortex_description/: package.xml
kortex_description/arms/gen3/6dof/config/: ros2_controllers.yaml
kortex_description/arms/gen3/6dof/meshes/collision/: base_link.STL  bicep_link.STL  bracelet_no_vision_link.STL  bracelet_with_vision_link.STL  forearm_link.STL  shoulder_link.STL  spherical_wrist_1_link.STL  spherical_wrist_2_link.STL
kortex_description/arms/gen3/6dof/urdf/: gen3_macro.xacro
kortex_description/arms/gen3_lite/6dof/config/: ros2_controllers.yaml
kortex_driver/: CMakeLists.txt
kortex_driver/include/kortex_driver/: hardware_interface.hpp
kortex_driver/src/: hardware_interface.cpp
kortex_moveit_config/kinova_gen3_6dof_robotiq_2f_85_moveit_config/: package.xml
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/: package.xml
kortex_moveit_config/kinova_gen3_7dof_robotiq_2f_85_moveit_config/config/: ros2_controllers.yaml
